k8s/webui-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ollama-webui-http
  namespace: ollama
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`ollama.alienware.loc`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: webui
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ollama-webui-https
  namespace: ollama
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ollama.alienware.loc`)
      kind: Rule
      services:
        - name: webui
          port: 80
  tls:
    secretName: ollama-local-cert
